2004-02-05 Aaron Weber <aaron@ximian.com>

	* README: update to describe better how to use the doc/web stuff

	* index: change layout, move old news to oldnews page, rewrite
	content, add new headings, decrease size of other headings.

	* jit-debug: change link to martin's page; now it points to the
	dir holding the debugger files. Fix grammar in one sentence.

	* oldnews: erase very old news, add slightly old news removed from
	index

	* web/htmlify: shrink size of newsitem headings.
	
2004-02-03  Atsushi Enomoto <atsushi@ximian.com>

	* xml-classes : updates

2004-01-22  Atsushi Enomoto <atsushi@ximian.com>

	* xml-classes : status update, additional infos.

2004-01-16  Atsushi Enomoto <atsushi@ximian.com>

	* web/commands : Added xml-classes (forgot to commit).
	* mono-build-w32.sh : Added icu support as well as glib.
	* ChangeLog : tiny fix

2004-01-11  Atsushi Enomoto <atsushi@ximian.com>

	* xml-classes : added v2 info. schema status updates.

	Added ChangeLog. (There is no reason not to keep ChangeLog for 
	documents, at least for not a little changes ;-)