@@ -1,3 +1,8 @@
+2004-03-04  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* mono-hacking-roadmap.html: Updated status about assembly
+	signing.
+
 2004-02-05 Aaron Weber <aaron@ximian.com>
 
 	* README: update to describe better how to use the doc/web stuff
